backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  jnp-backend
  labels:
    app:  jnp-backend
spec:
  selector:
    matchLabels:
      app: jnp-backend
  replicas: 1
  template:
    metadata:
      labels:
        app:  jnp-backend
    spec:
      containers:
      - name:  jnp-backend
        image: europe-central2-docker.pkg.dev/jnp2-fda92/jnp-repo/backend:v2
      - name:  jnp-matchmaking
        image: europe-central2-docker.pkg.dev/jnp2-fda92/jnp-repo/matchmaking:v1
