backend/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "server-config"}'
  name: jnp-backend
spec:
  selector:
    app: jnp-backend
  type: NodePort    
  ports:
  - name: jnp-backend
    protocol: TCP
    port: 80
    targetPort: 8008
