backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  defaultBackend:
    service:
      name: jnp-backend
      port:
        number: 80
  rules:
